# webox

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.build.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: docker.yml
cmd/weagent/: main.go  main_test.go
docker/agentgateway/: config.example.yaml
docker/scripts/: entrypoint.sh  install-agentgateway.sh  webox-identity.sh  wechat-ctl.sh
docker/wechat/: README.md
docs/: architecture.md  docker-mirrors.md
internal/config/: config.go  config_test.go
internal/ilink/: server.go  server_test.go
internal/qrsource/: qrsource.go  qrsource_test.go
internal/sender/: sender.go  sender_test.go
internal/signedpayload/: signedpayload.go  signedpayload_test.go
internal/wechat/: key_coverage_test.go  state.go  state_test.go
internal/wechatdb/: key_coverage_test.go  recipient_test.go  remark_test.go  wechatdb.go  wechatdb_test.go
internal/wecom/: server.go  server_test.go
scripts/: preflight-container.sh  verify-agentgateway-capture.sh  verify-wechat-qrcode-capture.sh
src/: config.rs  error.rs  ilink.rs  main.rs  media_store.rs  qr_source.rs  signed_payload.rs  ui_sender.rs  wechat_db.rs  wechat_state.rs
tests/e2e/: README.md  docker-compose.yml  main.go  main_test.go
tests/e2e/runner/: docker_peer.go  runner.go  runner_test.go
